# ai_product_engineer

./: .env.template  .gitignore  Makefile  README.md  _sidebar.md  docker-compose.yml  index.html  requirements.txt  scratch_rewrite.py
configs/: index_config.yml  model_config.json
dagster-pipelines/: pyproject.toml
jupyter_notebooks/: EDA.ipynb  Part 10_ recommeder systems.ipynb  Part 1_ ML intro.ipynb  Part 2_ gradient descent.ipynb  Part 3_ validation, generalization ability, overfitting.ipynb  Part 5_ Trees. Boosting.ipynb  Part 6 _ ML project example.ipynb  Part 7 _ unsupervised learning.ipynb  Part 8 _ neural networks.ipynb  data_retrieval.ipynb  pretrained-vectors.ipynb  recommendation_system.ipynb  vol_00_pre_requirements_01_machine_learning_intro.ipynb  vol_00_pre_requirements_01_machine_learning_intro_hw_1.ipynb  vol_00_pre_requirements_01_machine_learning_intro_hw_2.ipynb  vol_00_pre_requirements_02_machine_learning_classification.ipynb  vol_00_pre_requirements_02_machine_learning_supervised.ipynb  vol_00_pre_requirements_02_machine_learning_supervised_hw.ipynb  vol_00_pre_requirements_03_feature_engineering.ipynb  vol_00_pre_requirements_03_machine_learning_supervised_hw.ipynb  vol_00_pre_requirements_04_machine_learning_linear_regression_sgd_deep_dive.ipynb  vol_00_pre_requirements_05_machine_learning_validation_generalization_overfitting.ipynb  vol_00_pre_requirements_05_unsupervised_hw.ipynb  vol_00_pre_requirements_05_unsupervised_intro.ipynb  vol_00_pre_requirements_06_feature_engineering.ipynb  vol_01_ml_products_01_ML_project_flow.ipynb  (+45 more)
(+164 files in other folders)
